--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Julie Yende'
+  github_nickname: 'jyende'
+- name: 'Thibault Brillet'
+  github_nickname: 'tbrillet'
